NASM user programs are working!

--- a/user/Makefile
+++ b/user/Makefile
@@ -1,14 +1,19 @@
 ASMSOURCES := $(wildcard *.asm)
 SOURCES := $(ASMSOURCES) $(CPPSOURCES)
-OBJECTS := $(addsuffix .dat,$(basename $(SOURCES)))
+FSFILES :=
+OBJECTS := $(FSFILES) $(addsuffix .o,$(basename $(SOURCES)))
 
 ASFLAGSBIN := -O32 -f bin
 NASM := nasm
+FS := ./fs
 
-all: $(OBJECTS)
+all: $(OBJECTS) data.img
 
-%.dat: %.asm
-	$(NASM) $(ASFLAGSBIN) $< -o $@
+data.img: $(OBJECTS)
+	@$(FS) $(OBJECTS) $@
+
+%.o: %.asm
+	@$(NASM) $(ASFLAGSBIN) $< -o $@
 
 clean:
 	@find . -name '*.dat' -delete
