Trying to dinamically load ELFs.

--- a/user/c_test/Makefile
+++ b/user/c_test/Makefile
@@ -6,7 +6,7 @@ COBJ := $(addsuffix .o,$(basename $(CSRC)))
 
 LD := ld
 
-CCFLAGS := -m32 -c -std=c99 -march=i386 -Wshadow -Wall -nostdinc -fno-pic -fno-builtin -fno-stack-protector -fomit-frame-pointer -fno-common -Iinclude
+CCFLAGS := -m32 -c -std=c99 -march=i386 -Wshadow -Wall -nostdinc -fno-pic -fno-builtin -fno-stack-protector -fomit-frame-pointer -fno-common
 LDFLAGS := -m elf_i386 -u _start -nostdlib --warn-common -nmagic -gc-sections -s
 
 OUT := ../c_test.dat
