Improved the console. Compiles now with am i686-elf cross compiler.

--- a/user/bash/Makefile
+++ b/user/bash/Makefile
@@ -4,12 +4,13 @@ LIBS := $(LIBDIR)sxlblib.a $(LIBDIR)posixc.a $(LIBDIR)stdlibc.a
 CSRC := $(wildcard *.c)
 COBJ := $(addsuffix .o,$(basename $(CSRC)))
 
-LD := ld
+LD := i686-elf-ld
+CC := i686-elf-gcc
 
 CCFLAGS := -m32 -c -std=gnu99 -march=i386 -Wshadow -w -nostdinc -fno-pic -fno-builtin -fno-stack-protector -fomit-frame-pointer -fno-common -I../../lib/stdlibc/
 LDFLAGS := -m elf_i386 -u _start -nostdlib --warn-common -s
 
-OUT := ../c_test.dat
+OUT := ../bash.dat
 
 all: $(OUT)
 
