--- a/lib/sxlblib/Makefile
+++ b/lib/sxlblib/Makefile
@@ -1,22 +1,29 @@
 ASSRC := $(wildcard *.asm)
+CSRC  := $(wildcard *.c)
 ASOBJ := $(addsuffix .o,$(basename $(ASSRC)))
+COBJ  := $(addsuffix .o, $(basename $(CSRC)))
+OBJ   := $(ASOBJ) #$(COBJ)
 
 AS := nasm
-
+AR := i686-elf-ar
+CC := i686-elf-gcc
+CCFLAGS := -m32 -I /home/vados/src/newlib/newlib/libc/include -c -std=gnu11 -w
 ASFLAGS := -Ox -f elf
 ARFLAGS := rs
-AR := i686-elf-ar
 
 OUT := ../bin/sxlblib.a
 
 all: $(OUT)
 
-$(OUT): $(ASOBJ)
+$(OUT): $(OBJ)
 	mkdir -p $(@D)
-	$(AR) $(ARFLAGS) $(OUT) $(ASOBJ)
+	$(AR) $(ARFLAGS) $(OUT) $(OBJ)
 
 %.o: %.asm
-	$(AS) $< $(ASFLAGS)	 -o $@
+	$(AS) $< $(ASFLAGS)	-o $@
+
+%.o: %.c
+	$(CC) $< $(CCFLAGS)	-o $@
 
 clean:
 	@find . -name '*.o' -delete
