--- a/user/bash/Makefile
+++ b/user/bash/Makefile
@@ -1,5 +1,7 @@
 LIBDIR := ../../lib/bin/
-LIBS := $(LIBDIR)sxlblib.a $(LIBDIR)posixc.a $(LIBDIR)stdlibc.a
+NEWLIBDIR := ../../toolchain/usr/i686-sxlb/lib/
+#LIBS := $(LIBDIR)sxlblib.a $(LIBDIR)posixc.a $(LIBDIR)stdlibc.a
+LIBS := $(NEWLIBDIR)libc.a $(NEWLIBDIR)libg.a $(NEWLIBDIR)libm.a $(NEWLIBDIR)libnosys.a $(LIBDIR)sxlblib.a 
 
 CSRC := $(wildcard *.c)
 COBJ := $(addsuffix .o,$(basename $(CSRC)))
@@ -7,7 +9,8 @@ COBJ := $(addsuffix .o,$(basename $(CSRC)))
 LD := i686-elf-ld
 CC := i686-elf-gcc
 
-CCFLAGS := -m32 -c -std=gnu99 -march=i386 -Wshadow -w -nostdinc -fno-pic -fno-builtin -fno-stack-protector -fomit-frame-pointer -fno-common -I../../lib/stdlibc/
+#CCFLAGS := -m32 -c -std=gnu11 -w -I../../lib/stdlibc/
+CCFLAGS := -m32 -c -std=gnu11 -w -I$(NEWLIBDIR)../include/
 LDFLAGS := -m elf_i386 -u _start -nostdlib --warn-common -s
 
 OUT := ../bash.dat
