--- a/lib/sxlblib/Makefile
+++ b/lib/sxlblib/Makefile
@@ -2,12 +2,12 @@ ASSRC := $(wildcard *.asm)
 CSRC  := $(wildcard *.c)
 ASOBJ := $(addsuffix .o,$(basename $(ASSRC)))
 COBJ  := $(addsuffix .o, $(basename $(CSRC)))
-OBJ   := $(ASOBJ) #$(COBJ)
+OBJ   := $(ASOBJ) $(COBJ)
 
 AS := nasm
 AR := i686-elf-ar
 CC := i686-elf-gcc
-CCFLAGS := -m32 -I /home/vados/src/newlib/newlib/libc/include -c -std=gnu11 -w
+CCFLAGS := -m32 -c -std=gnu11 -w -I /home/vados/src/newlib/newlib/libc/include
 ASFLAGS := -Ox -f elf
 ARFLAGS := rs
 
