--- a/user/bash/Makefile
+++ b/user/bash/Makefile
@@ -1,5 +1,6 @@
 LIBDIR := ../../lib/bin/
 NEWLIBDIR := ../../toolchain/usr/i686-sxlb/lib/
+USERLIBDIR := ../../lib/sxlblib/
 #LIBS := $(LIBDIR)sxlblib.a $(LIBDIR)posixc.a $(LIBDIR)stdlibc.a
 LIBS := $(NEWLIBDIR)libc.a $(NEWLIBDIR)libg.a $(NEWLIBDIR)libm.a $(NEWLIBDIR)libnosys.a $(LIBDIR)sxlblib.a $(LIBDIR)posixc.a
 
@@ -10,7 +11,7 @@ LD := i686-elf-ld
 CC := i686-elf-gcc
 
 #CCFLAGS := -m32 -c -std=gnu11 -w -I../../lib/stdlibc/
-CCFLAGS := -m32 -c -std=gnu11 -w -fdelete-null-pointer-checks -I$(NEWLIBDIR)../include/
+CCFLAGS := -m32 -c -std=gnu11 -w -fdelete-null-pointer-checks -I$(USERLIBDIR) -I$(NEWLIBDIR)../include/
 LDFLAGS := -m elf_i386 -u _start -nostdlib --warn-common -s
 
 OUT := ../bash.dat
