--- a/user/bash/Makefile
+++ b/user/bash/Makefile
@@ -1,5 +1,5 @@
 LIBDIR := ../../lib/bin/
-NEWLIBDIR := ../../toolchain/usr/i686-sxlb/lib/
+NEWLIBDIR := ../../lib/bin/i686-sxlb/lib/
 USERLIBDIR := ../../lib/sxlblib/
 #LIBS := $(LIBDIR)sxlblib.a $(LIBDIR)posixc.a $(LIBDIR)stdlibc.a
 LIBS := $(NEWLIBDIR)libc.a $(NEWLIBDIR)libg.a $(NEWLIBDIR)libm.a $(NEWLIBDIR)libnosys.a $(LIBDIR)sxlblib.a $(LIBDIR)posixc.a 
@@ -12,7 +12,7 @@ CC := i686-elf-gcc
 
 #CCFLAGS := -m32 -c -std=gnu11 -w -I../../lib/stdlibc/
 CCFLAGS := -m32 -c -std=gnu11 -w -fdelete-null-pointer-checks -I$(USERLIBDIR) -I$(NEWLIBDIR)../include/
-LDFLAGS := -m elf_i386 -u _start -nostdlib --warn-common -s -Map=m.map
+LDFLAGS := -m elf_i386 -u _start -nostdlib --warn-common -s
 
 OUT := ../bash.dat
 
