Going to change the vmm, better backup.

--- a/isodir/boot/grub/grub.cfg
+++ b/isodir/boot/grub/grub.cfg
@@ -1,4 +1,11 @@
-timeout=0
+set timeout=0
+
+#set gfxmode=auto
+#set gfxpayload=keep
+#insmod vbe
+#insmod gfxterm
+#terminal_output gfxterm
+
 menuentry "SXLB" {
 	multiboot2 /boot/OS.bin
     boot
