--- a/isodir/boot/grub/grub.cfg
+++ b/isodir/boot/grub/grub.cfg
@@ -1,12 +1,28 @@
 set timeout=0
 
-#set gfxmode=auto
-#set gfxpayload=keep
-#insmod vbe
-#insmod gfxterm
-#terminal_output gfxterm
+set gfxmode=800x600
+set gfxmode=keep
+insmod vbe
+insmod gfxterm
+terminal_output gfxterm
+
+function load_video {
+  if [ x$feature_all_video_module = xy ]; then
+    insmod all_video
+  else
+    insmod efi_gop
+    insmod efi_uga
+    insmod ieee1275_fb
+    insmod vbe
+    insmod vga
+    insmod video_bochs
+    insmod video_cirrus
+  fi
+}
 
 menuentry "SXLB" {
+	load_video
+	gfxmode=keep
 	multiboot2 /boot/OS.bin
     boot
 }
